seedboxk8s/applications/homepage/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`seedbox.${productionClusterFqdn}`) || Host(`${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: homepage
          kind: Service
          port: 3000
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
